added overscroll hidden to navbar

--- a/style.css
+++ b/style.css
@@ -43,8 +43,9 @@ p {
 .navbar {
   position: absolute;
   top: 0;
-  width: 100vw;
+  /* width: 100vw; */
   z-index: 3;
+  overflow: hidden;
 }
 
 .nav-container {
